New branch changing dashboard design

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>MXS MyAccount Dashboard</title>
   </head>
   <body>
+      <noscript>
+          <div id="no-script">
+              <div id="no-script-box">
+                  <img id="no-script-img" src="assets/images/js-logo.png" alt="" />
+                  <p id="no-script-maintext">
+                      Oh Noes! I need JavaScript to run this app.
+                  </p>
+                  <p id="no-script-subtext">
+                      This Web application relies on Javascript to function, please
+                      <a
+                              target="_blank"
+                              rel="noopener noreferrer"
+                              href="https://www.enable-javascript.com/">enable</a>
+                      it. Thank You!🚀
+                  </p>
+              </div>
+          </div>
+      </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
