Added support for Spotify OAuth, Redesigned OAuth pages, Started on Connections Page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="dark select-none">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -25,7 +25,7 @@
               </div>
           </div>
       </noscript>
-    <div id="app"></div>
+    <div vaul-drawer-wrapper id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
