--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
               </div>
           </div>
       </noscript>
-    <div id="app"></div>
+    <div vaul-drawer-wrapper id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
